--- a/source/pages/activitysuccess/activitysuccess.wxss
+++ b/source/pages/activitysuccess/activitysuccess.wxss
@@ -1,1 +1,10 @@
 /* pages/activitysuccess/activitysuccess.wxss */
+.ha{
+    line-height: 92rpx;
+    width: 520rpx;
+    text-align: center;
+    background: #5AA57A;
+    margin-top: 268rpx;
+    border-radius: 8rpx;
+    color: #fff;
+}
