--- a/source/pages/orderdetail/orderdetail.wxss
+++ b/source/pages/orderdetail/orderdetail.wxss
@@ -31,6 +31,7 @@ page{
     padding: 22rpx 16rpx 28rpx 24rpx;
     background: #FFFFFF;
     border-radius: 12rpx;
+    margin-bottom: 15px;
 }
 .goods {
     margin:0px 24rpx;
@@ -58,6 +59,8 @@ page{
     margin: 0 30rpx;
     background-color: #FFFFFF;
     padding: 10px;
+    margin-bottom: 100px;
+    border-radius: 10px;
 }
 .margin-top-24 {
     margin-top: 24rpx;
