--- a/source/pages/ordersubmit/ordersubmit.wxss
+++ b/source/pages/ordersubmit/ordersubmit.wxss
@@ -14,7 +14,7 @@ page {
 .sendactive {
     width: 156rpx;
     height: 60rpx;
-    background: #44B549;
+    background: #5AA57A;
     border-radius: 30rpx;
     line-height: 60rpx;
     text-align: center;
@@ -35,6 +35,7 @@ page {
     width: 40rpx;
     height: 40rpx;
     margin-right: 16rpx;
+    margin-top: 3px;
 }
 
 .righticon {
@@ -48,6 +49,7 @@ page {
     padding: 60rpx 24rpx;
     background: #FFFFFF;
     border-radius: 20rpx;
+    margin-bottom: 10px;
 }
 
 .goods {
@@ -81,6 +83,7 @@ page {
     background-color: #FFFFFF;
     border-radius: 10px;
     padding: 13px;
+    margin-bottom: 100px;
 }
 
 .margin-top-24 {
