--- a/source/pages/orderdetail/orderdetail.wxss
+++ b/source/pages/orderdetail/orderdetail.wxss
@@ -76,6 +76,7 @@ page{
     bottom: 0;
     left: 0;
     z-index: 10;
+    justify-content:flex-end;
 }
 .margin-left-24 {
     margin-left: 24rpx;
