--- a/source/pages/orderreturn/orderreturn.wxss
+++ b/source/pages/orderreturn/orderreturn.wxss
@@ -50,7 +50,7 @@ page {
 .uploadimg {
     width: 100px;
     background: #FFFFFF;
-
+    margin-left: 15px;
 }
 
 .phone_box {
@@ -74,3 +74,46 @@ page {
     justify-content: center;
     align-items: center;
   }
+  .return_left{
+    display: flex;
+    align-items: center;
+    width: 70%;
+  }
+  .pageBox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 40%;
+  }
+  .pageBox_text{
+    height: 50px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #F3F6F7;
+    justify-content: center;
+    width: 100%;
+  }
+  .return_price_name{
+    margin-left: 5px;
+    display: flex;
+    align-items: center;
+    height: 40px;
+  }
+  .shanchu{
+    position: absolute;
+    top: 0;
+    left: 90px;
+    width: 20px;
+    height: 20px;
+    z-index: 2;
+  }
+  .pore {
+    position: relative;
+    margin-left: 10px;
+    display: flex;
+}
+.returnimgs_boxs{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
