--- a/source/pages/orderreturn/orderreturn.wxss
+++ b/source/pages/orderreturn/orderreturn.wxss
@@ -42,15 +42,16 @@ page {
 
 .return_beizhu {
     margin: 10px 10px;
-    padding: 10px;
+    padding: 10px 0px 10px 10px;
     background-color: #FFFFFF;
     border-radius: 10px;
 }
 
 .uploadimg {
-    width: 100px;
+    width: 111px;
     background: #FFFFFF;
-    margin-left: 15px;
+    margin-top: 10px;
+    
 }
 
 .phone_box {
@@ -109,7 +110,7 @@ page {
   }
   .pore {
     position: relative;
-    margin-left: 10px;
+    width: 115px;
     display: flex;
 }
 .returnimgs_boxs{
