--- a/source/pages/ordersubmit/ordersubmit.wxss
+++ b/source/pages/ordersubmit/ordersubmit.wxss
@@ -49,7 +49,14 @@ page {
     padding: 60rpx 24rpx;
     background: #FFFFFF;
     border-radius: 20rpx;
-    margin-bottom: 10px;
+    margin-bottom: 1
+    
+    
+    
+    
+    
+    
+    0px;
 }
 
 .goods {
